force-app/main/default/objects/Academy_Course__c/Academy_Course__c.object-meta.xml
<CustomObject>
    <description>Academy offers for introductory AI and fashion modelling education.</description>
    <label>Academy Course</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Academy Course Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Academy Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>