force-app/main/default/objects/Academy_Course__c/fields/Audience_Level__c.field-meta.xml
<CustomField>
    <fullName>Audience_Level__c</fullName>
    <label>Audience Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
                <default>true</default>
                <label>Beginner</label>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>