force-app/main/default/objects/Academy_Course__c/fields/Delivery_Mode__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Mode__c</fullName>
    <label>Delivery Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Person</fullName>
                <default>true</default>
                <label>In Person</label>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>