force-app/main/default/objects/Academy_Course__c/fields/Track__c.field-meta.xml
<CustomField>
    <fullName>Track__c</fullName>
    <label>Track</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Artificial Intelligence Basics</fullName>
                <default>true</default>
                <label>Artificial Intelligence Basics</label>
            </value>
            <value>
                <fullName>Fashion Modelling Fundamentals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>